# pyGDel3D

./: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py  test.py
GDelFlipping/src/: DelaunayChecker.cpp  bindings.cpp
GDelFlipping/src/gDel3D/: CommonTypes.h  GpuDelaunay.cu  GpuDelaunay.h
GDelFlipping/src/gDel3D/CPU/: CPUDecl.h  Splaying.cpp  Star.cpp
GDelFlipping/src/gDel3D/GPU/: GPUDecl.h  HostToKernel.h  KerDivision.cu  KerPredicates.h  ThrustWrapper.cu
dtet/: CMakeLists.txt
dtet/src/: main.cpp
src/gdel3d/: DelaunayChecker.h  __init__.py  bindings.cpp
src/gdel3d/gDel3D/: CommonTypes.h  GpuDelaunay.h
src/gdel3d/gDel3D/CPU/: Splaying.cpp  Splaying.h
src/gdel3d/gDel3D/GPU/: CudaWrapper.h  GPUDecl.h  KerPredicates.cu  ThrustWrapper.h
