[project]
name = "gdel3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.setuptools]
packages = ["gdel3d"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10",
    "torch>=2.7.1",
    "numpy"
]
build-backend = "setuptools.build_meta"
