[project]
name = "gdel3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10",
    "torch>=2.7.1",
    "numpy",
    "cmake>=3.24"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # This assumes you've adopted the src-layout
