[project]
name = "gdel3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "torchvision>=0.19",
]

[build-system]
requires = [
    "setuptools>=51.0",
    "wheel",
    "pybind11>=2",
    "numpy",
    "cmake>=3.24",
    "torch"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # This assumes you've adopted the src-layout
